--- a/android/PlentyVocabulary/app/src/main/res/values/colors.xml
+++ b/android/PlentyVocabulary/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="pressed">#330000ff</color>
 </resources>
