--- a/android/PlentyVocabulary/app/src/main/res/values/themes.xml
+++ b/android/PlentyVocabulary/app/src/main/res/values/themes.xml
@@ -18,5 +18,7 @@
         <item name="android:layout_marginTop">@dimen/margin</item>
         <item name="android:layout_marginStart">@dimen/margin</item>
         <item name="android:layout_marginEnd">@dimen/margin</item>
+        <item name="android:padding">@dimen/padding</item>
+        <item name="android:background">@drawable/common_selector</item>
     </style>
 </resources>
