--- a/android/PlentyVocabulary/app/src/main/res/layout/activity_word_detail.xml
+++ b/android/PlentyVocabulary/app/src/main/res/layout/activity_word_detail.xml
@@ -4,64 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/fl_fragment_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_word"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="100dp"
-                android:textSize="20sp"
-                android:text="Hello" />
-
-            <TextView
-                android:id="@+id/tv_phonetic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="2dp"
-                android:textSize="20sp"
-                android:text="/həˈləʊ/" />
-
-            <TextView
-                android:id="@+id/tv_sample"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:textSize="18sp"
-                android:text="‘ Oh, hello, ’ he said, with a smile." />
-
-            <TextView
-                android:id="@+id/tv_meaning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="@dimen/margin"
-                android:layout_marginEnd="@dimen/margin"
-                android:textSize="14sp"
-                android:text="an expression of greeting" />
-
-            <TextView
-                android:id="@+id/tv_meaning_zh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="@dimen/margin"
-                android:layout_marginEnd="@dimen/margin"
-                android:textSize="14sp"
-                android:text="你好" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </ScrollView>
-
-
-
+    </FrameLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
